feat(npm): add installation of node-gyp on scipts preinstall

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "url": "https://github.com/gooy/aurelia-i18next-parser/issues"
   },
   "scripts": {
+    "preinstall": "npm install -g node-gyp",
     "test": "npm run jshint",
     "jshint": "jshint index.js gulpfile.js"
   },
