--- a/package.json
+++ b/package.json
@@ -36,7 +36,6 @@
     "jquery": "^2.1.4",
     "jsdom": "^3.1.2",
     "lodash": "~2.4.1",
-    "metro-bootstrap": "talkslab/metro-bootstrap",
     "mkdirp": "^0.5.1",
     "ncp": "^2.0.0",
     "path": "^0.11.14",
@@ -66,8 +65,7 @@
       "lib": "src"
     },
     "dependencies": {
-      "lodash": "npm:lodash@^3.8.0",
-      "talkslab/metro-bootstrap": "github:talkslab/metro-bootstrap@master"
+      "lodash": "npm:lodash@^3.8.0"
     },
     "devDependencies": {
       "babel": "npm:babel-core@^5.1.13",
